travis-ci file modified change docker build line

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ services:
 before_install:
   #building docker image for testing
   #- docker build -t cajina/docker-react -f Dockerfile.dev .
-  - docker build -t cajina/docker-react .
+  - docker build -t cajina/pythonapp .
 
 #series of commands when tests needs to be executed
 script:
